feat: add all main routes and docs
